# Pakal

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-build.sh  docker-compose.yml  run-in-docker.sh
PakalApp/PakalApp.NativeActivity/: android.cpp
PakalApp/PakalApp.Packaging/: PakalApp.Packaging.androidproj
android/: Pakal.vcxproj.filters  pakal.vcxproj
android/pakal/: pakal.vcxproj
docs/: ARCHITECTURE.md  BGFX_BACKEND.md  BUILDING.md  ENTITY_PATTERNS.md  EXAMPLES.md  README.md  SUBSYSTEMS.md  USAGE.md
examples/ContraGame/: CMakeLists.txt  CODE_REVIEW_FIXES.md  ContraGame.cpp  ContraGame.h  IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.md  main.cpp
examples/ContraGame/Components/: EnemyAI.cpp  EnemyAI.h  Health.cpp  Health.h  PlayerController.cpp  PlayerController.h  Weapon.cpp  Weapon.h
examples/ContraGame/GameState/: GameOverState.cpp  GameOverState.h  GamePlayState.cpp  GamePlayState.h  MenuState.cpp  MenuState.h
examples/ContraGame/GameStates/: GamePlayState.cpp  GamePlayState.h
examples/ContraGame/Systems/: CollisionSystem.cpp  CollisionSystem.h  ScoreSystem.cpp  ScoreSystem.h  SpawnSystem.cpp  SpawnSystem.h
examples/basic_example/: README.md  main.cpp
source/: Archive.h  AsyncTaskDispatcher.cpp  AsyncTaskDispatcher.h  BaseGameState.h  BasicTask.cpp  BasicTask.h  Box2DPhysicsSystem.cpp  Box2DPhysicsSystem.h  Clock.h  CompileUnit_1.cpp  Component.cpp  Component.h  ComponentFactory.h  ComponentManager.cpp  ComponentManager.h  ComponentSystem.cpp  ComponentSystem.h  Config.h  DirectorySource.h  DoubleBufferedList.h  DummyGraphicsSystem.cpp  DummyGraphicsSystem.h  DummyPhysicsSystem.cpp  DummyPhysicsSystem.h  DummyUIManager.cpp  DummyUIManager.h  Element.h  Engine.cpp  Engine.h  EngineComponents.cpp  EngineSettings.cpp  Entity.cpp  Entity.h  EntityDescriptor.cpp  EntityDescriptor.h  EntitySystem.cpp  Event.h  EventArgs.h  EventScheduler.cpp  EventScheduler.h  (+96 more)
source/LuaState/include/: LuaStack.h  LuaState.h
source/android/: OsWrapperAndroid.cpp  OsWrapperAndroid.h
source/bgfx/: BgfxDebugDrawer.cpp  BgfxDebugDrawer.h  BgfxGraphicsSystem.cpp  BgfxGraphicsSystem.h  CameraComponent_Bgfx.cpp  CameraComponent_Bgfx.h  SpriteComponent_Bgfx.cpp  SpriteComponent_Bgfx.h
source/box2D/: B2DebugDrawBgfx.cpp  B2DebugDrawBgfx.h  B2DebugDrawIrr.cpp  B2DebugDrawIrr.h  Box2DPhysicsListeners.cpp  Box2DPhysicsListeners.h  Box2DPhysicsSystem.cpp  Box2DPhysicsSystem.h  SpritePhysicsComponent_Box2D.cpp  SpritePhysicsComponent_Box2D.h
source/components/: AnimatedMeshComponent.h  AnimatedMeshComponent_Irrlitch.cpp  AutomataComponent.cpp  AutomataComponent.h  BodyComponent.cpp  BodyComponent.h  BodyComponent_Box2D.cpp  BodyComponent_Box2D.h  CameraComponent.h  CameraComponent_Irrlicht.cpp  CameraComponent_Irrlicht.h  CharacterComponent.cpp  CharacterComponent.h  CppBindClass_lua.h  GamepadComponent.cpp  GamepadComponent.h  GraphicComponent.cpp  GraphicComponent.h  GridComponent.h  GridComponent_Irrlicht.cpp  GridComponent_Irrlicht.h  ICharacterHandler.h  InputBinder.h  InputHandlerComponent.cpp  InputHandlerComponent.h  MeshComponent.cpp  MeshComponent.h  MeshComponent_Irrlitch.cpp  MeshComponent_Irrlitch.h  PhysicComponent.cpp  PhysicComponent.h  RenderComponent.cpp  RenderComponent.h  SFXComponent.h  ScriptComponent.cpp  ScriptComponent.h  ScriptComponent_Lua.cpp  Sprite.cpp  Sprite.h  SpriteComponent.h  (+16 more)
source/components/DynamicMesh/: DynamicMesh.cpp  DynamicMesh.h  DynamicMeshComponent.h  DynamicMeshComponent_Irrlicht.cpp  DynamicMeshComponent_Irrlicht.h  MeshBuilder.h  MeshFns.h  VertexInfo.h
source/components/DynamicMesh/poly2tri/common/: shapes.cc  shapes.h
source/irrlicht/: BatchSceneNode.cpp  BatchSceneNode.h  CBatchingMesh.cpp  CIrrDeviceAndroidPakal.cpp  DirectorySourceIrrlitch.h  GridSceneNode.cpp  IrrGraphicsSystem.cpp  IrrGraphicsSystem.h  IrrRendererInfo.h  IrrlitchStream.h  MaterialManager.cpp  MaterialManager.h  MeshComponent.h  SceneNodeBatcher.cpp  SceneNodeBatcher.h  SpriteBatcher.cpp  SpriteBatcher.hpp  SpriteNode_Irrlicht.cpp  SpriteNode_Irrlicht.hpp  Sprite_Irrlicht.hpp  StaticMeshComponent.cpp  StaticMeshComponent.h  StreamFileIrrlicht.cpp  StreamFileIrrlicht.h  StreamIrrlitch.h  TiledNode_Irrlicht.hpp  ZipSourceIrrlitch.h
source/math/: matrix.h  matrix3.h  matrix4.h  tmconfig.h  tmg.h  vector2.h  vector3.h  vector4.h  vectorn.h
source/rocketgui/: IrrRocketGUI.cpp  IrrRocketGUI.h  IrrRocketRenderer.cpp  PakalRocketFileInterface.cpp  PakalRocketFileInterface.h  RocketGUI.cpp  RocketGUI.h  RocketInput.cpp  RocketInput.h  RocketSystemInterface.h  RocketUIComponents.cpp  RocketUIComponents.h
source/script/: ScriptableGameState.cpp
source/sfml/: GamepadComponent_SFML.h  Gamepad_SFML.cpp  Gamepad_SFML.h  InputManager_SFML.cpp  InputManager_SFML.h  Keyboard_SFML.cpp  Keyboard_SFML.h  MusicComponentSFML.cpp  MusicComponentSFML.h  SFXComponentSFML.cpp  SFXComponentSFML.h  SoundManagerSFML.cpp  SoundManagerSFML.h  SoundManager_SFML.cpp  SoundManager_SFML.h  StreamFileSFML.h  StreamSFML.h  WindowCreatorSFML.cpp  WindowCreatorSFML.h
source/unix/: ClockImpl.h
source/win32/: ClockImpl.cpp
trunk/libs/Pakal_II/android/: Pakal.vcxproj.filters  pakal.vcxproj
trunk/libs/Pakal_II/source/: Archive.h  AsyncTaskDispatcher.cpp  AsyncTaskDispatcher.h  BaseGameState.h  BasicTask.cpp  BasicTask.h  Box2DPhysicsSystem.cpp  Box2DPhysicsSystem.h  Clock.cpp  Clock.h  CompileUnit_1.cpp  Component.h  ComponentFactory.h  ComponentManager.cpp  ComponentManager.h  ComponentSystem.cpp  ComponentSystem.h  Config.h  DirectorySource.h  DoubleBufferedList.h  DummyGraphicsSystem.h  Element.cpp  Element.h  Engine.cpp  Engine.h  EngineComponents.cpp  EngineSettings.cpp  Entity.cpp  EntityDescriptor.h  EntityManager.cpp  EntityManager.h  EntitySystem.cpp  EntitySystem.h  Event.h  EventArgs.h  EventScheduler.cpp  EventScheduler.h  EventSystem.cpp  EventSystem.h  EventSystemUtils.cpp  (+83 more)
trunk/libs/Pakal_II/vs2012/: Pakal_II.vcxproj  Pakal_II.vcxproj.filters
vs2012/: CMakeLists.txt  Pakal_II.vcxproj  Pakal_II.vcxproj.filters
(+137 files in other folders)
